fix: fix de css (alignement et datepicker)

--- a/src/scss/component/_form.scss
+++ b/src/scss/component/_form.scss
@@ -1,7 +1,7 @@
 input,
 select,
 .input-connexion {
-    border: 1px solid $light-grey;
+    border: 1px solid $grey;
     background-color: $white;
     text-align: center;
     width: 200px;
